fix: hiding awards on small devices

--- a/assets/styles/pages/TrialRedesign.scss
+++ b/assets/styles/pages/TrialRedesign.scss
@@ -72,6 +72,10 @@
 			height: 24em;
 			padding-top: 1.5em;
 		}
+
+		@media (max-width: 1550px) {
+			display: none;
+		}
 	}
 
 	&__container {
